[gd_scene load_steps=11 format=3 uid="uid://dicqe0rtlrn5g"]

[ext_resource type="Texture2D" uid="uid://tfc5ssvpiowj" path="res://Global Assets/Graphics/UI Graphics/StatusBoxBlank.png" id="1_n0niw"]
[ext_resource type="Script" uid="uid://xefbkp4l2det" path="res://Scenes/Battle/StatusBox3D.gd" id="1_u86t5"]
[ext_resource type="Texture2D" uid="uid://cpsxhd42h2dfo" path="res://Global Assets/Graphics/UI Graphics/HeartContainerFills.png" id="3_i5qyq"]
[ext_resource type="Texture2D" uid="uid://b453k3m6wcbfo" path="res://Global Assets/Graphics/UI Graphics/HeartContainers.png" id="4_slk7i"]
[ext_resource type="Texture2D" uid="uid://7rnrj2sx1wco" path="res://Global Assets/Graphics/UI Graphics/MoveContainersFills.png" id="5_qhorh"]
[ext_resource type="Texture2D" uid="uid://b867oac62lde1" path="res://Global Assets/Graphics/UI Graphics/MoveContainers.png" id="6_lfj20"]
[ext_resource type="Texture2D" uid="uid://cextwcebdq3sp" path="res://Global Assets/Graphics/UI Graphics/EnergyContainerFills.png" id="7_080ch"]
[ext_resource type="Texture2D" uid="uid://do4uclpanynia" path="res://Global Assets/Graphics/UI Graphics/EnergyContainers.png" id="8_jx1jk"]
[ext_resource type="Texture2D" uid="uid://bb50vw6eiou8y" path="res://Scenes/Battle/Assets/CurrentStatus.png" id="9_6l4jg"]
[ext_resource type="Texture2D" uid="uid://bscb3tew4uwyw" path="res://Global Assets/Graphics/Type Graphics/Domain Plates/ConstructNameplate.png" id="10_ui8wd"]

[node name="StatusBox" type="Sprite3D"]
texture = ExtResource("1_n0niw")
script = ExtResource("1_u86t5")

[node name="HeartFill" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.525, 0, 0.001)
visible = false
render_priority = 1
texture = ExtResource("3_i5qyq")
hframes = 7
frame = 4

[node name="HeartContainer" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.525, 0, 0.002)
visible = false
render_priority = 2
texture = ExtResource("4_slk7i")
hframes = 7
frame = 4

[node name="MoveFill" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.24643, -0.108174, 0.001)
render_priority = 1
texture = ExtResource("5_qhorh")
hframes = 9

[node name="MoveContainer" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.24643, -0.108174, 0.002)
render_priority = 2
texture = ExtResource("6_lfj20")
hframes = 9

[node name="SpeedDisplay" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26016, -0.0079776, 0.001)
render_priority = 3
outline_render_priority = 3
modulate = Color(0, 0, 0, 1)
text = "20"
outline_size = 0

[node name="EnergyFill" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.525, -0.26236, 0.001)
visible = false
render_priority = 1
texture = ExtResource("7_080ch")
hframes = 5
frame = 2

[node name="EnergyContainer" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.525, -0.26236, 0.002)
visible = false
render_priority = 2
texture = ExtResource("8_jx1jk")
hframes = 5
frame = 2

[node name="CurrentIndicator" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.03)
visible = false
render_priority = 1
texture = ExtResource("9_6l4jg")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.20846)

[node name="TypeNameplate" type="Sprite3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.8, -0.8, 0)
render_priority = 2
texture = ExtResource("10_ui8wd")

[node name="TypeNameplate2" type="Sprite3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.75, -0.8, 0)
render_priority = 2
texture = ExtResource("10_ui8wd")
